--- a/abcmax.html
+++ b/abcmax.html
@@ -6,16 +6,18 @@
 </head>
 <body>
 <script>
-    let numBer1 = prompt("Nhập số thứ nhất");
-    let numBer2 = prompt("Nhập số thứ hai");
-    let numBer3 = prompt("Nhập số thứ ba");
-    if (numBer1>numBer2){
-        if (numBer1>numBer3){
-            alert("max:" + numBer1);
-        }else {alert("max:" + numBer3)};
-    }else if (numBer2>numBer3){
-        alert("max:" + numBer2);
-    }else {alert("max" +numBer3)};
+    let numBer1 = Number(prompt("Nhập số thứ nhất"));
+    let numBer2 = Number(prompt("Nhập số thứ hai"));
+    let numBer3 = Number(prompt("Nhập số thứ ba"));
+    let max = numBer1>numBer2?numBer1>numBer3?numBer1:numBer3:numBer2>numBer3?numBer2:numBer3;
+    alert(max)
+    // if (numBer1>numBer2){
+    //     if (numBer1>numBer3){
+    //         alert("max:" + numBer1);
+    //     }else {alert("max:" + numBer3)};
+    // }else if (numBer2>numBer3){
+    //     alert("max:" + numBer2);
+    // }else {alert("max" +numBer3)};
 </script>
 </body>
 </html>
